app/home/components/achieveSection/achieveSection.scss
$container-width: 1080px;

.achieveSectionContainer {
  padding-top: 50px;
  padding-bottom: 100px;
  .innerContainer {
    max-width: $container-width;
    margin: 0 auto;
  }
  @media (max-width: 768px) {
    padding-bottom: 50px;
    .innerContainer {
      padding-left: 15px;
      padding-right: 15px;
    }
  }

  :global {
    .slick-active {
      button {
        background-color: #6096ff !important;
      }
    }
  }
}

.subTitle {
  text-align: center;
  font-size: 18px;
  line-height: 2.81;
  letter-spacing: 7.8px;
  color: #bbc2d0;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 4.21;
    letter-spacing: 5.2px;
    text-align: left;
  }
}

.title {
  text-align: center;
  font-size: 30px;
  line-height: 1.48;
  color: #0c1020;
  margin-bottom: 60px;

  strong {
    font-weight: 700;
  }

  @media (max-width: 768px) {
    font-size: 18px;
    line-height: 1.56;
    text-align: left;
    margin-bottom: 20px;
  }
}

.contentWrapper {
  display: flex;

  @media (max-width: 768px) {
    flex-flow: column;
  }
}
.subSection {
  vertical-align: top;
}

.detailWrapper {
  flex: 3 auto;
  position: relative;
  @media (max-width: 768px) {
    order: 1;
    height: 150px;
  }
}

.achieveItem {
  border-radius: 10px;
  padding: 22px;
  transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
  cursor: pointer;

  &:hover,
  &.active {
    background-color: #f5f7fb;
  }

  p {
    font-size: 18px;
    font-weight: 300;
    line-height: 1.56;
    letter-spacing: -0.8px;
    text-align: left;
    color: #0c1020;

    &.itemTitle {
      font-size: 20px;
      line-height: 1.42;
      letter-spacing: -0.8px;
      text-align: left;
      color: #6096ff;

      strong {
        font-weight: 400;
      }
    }
  }

  @media (max-width: 768px) {
    position: absolute;
    padding: 0 12px;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s linear 0.25s, opacity 0.25s ease;

    &.active {
      transition-delay: 0s;
      visibility: visible;
      height: auto;
      opacity: 1;
      background-color: inherit;
    }

    p {
      font-size: 14px;
      line-height: 1.82;
      letter-spacing: -0.6px;

      &.itemTitle {
        font-size: 14px;
        line-height: 1.82;
        letter-spacing: -0.6px;
      }
    }
  }

  transform: translateX(-20%);
  opacity: 0;
  transition: transform 0.8s ease, opacity 0.8s ease;
  &:nth-child(2) {
    transition-delay: 0.3s;
  }
  &:nth-child(3) {
    transition-delay: 0.6s;
  }
}

.itemImageWrapper {
  flex: 2 100%;
  text-align: center;
  position: relative;

  .itemImage {
    border-radius: 15px;
  }

  @media (min-width: 768px) {
    padding: 0 40px;
  }

  @media (max-width: 768px) {
    order: 0;
  }

  transform: translateY(5%);
  opacity: 0;
  transition: transform 0.8s ease, opacity 0.8s ease;
  transition-delay: 0.8s, 0.8s;
}

.sliderDots {
  margin-top: -25px;
  margin-bottom: 25px;
  padding: 0;
  text-align: center;

  li {
    margin: 0 4px;
    display: inline-block;

    button {
      background: none;
      border: none;
      padding: 0;
      font-size: 0;
      border-radius: 50%;
      width: 7.5px;
      height: 7.5px;
      background-color: #bbc2d0;
      transition: background-color 0.4s ease;

      &:focus {
        outline: none;
      }
    }
  }
}

.achieveSectionContainer.shown {
  .itemImageWrapper,
  .achieveItem {
    transform: translateX(0);
    opacity: 1;
  }
}

